fix alignment add logo

--- a/src/app/list-page/card/card.scss
+++ b/src/app/list-page/card/card.scss
@@ -2,46 +2,53 @@
 @use '../../../theme/helpers' as *;
 
 .card {
-  padding: $padding;
+  width: auto;
+  max-width: 600px;
+  padding: $spacing-md;
+  border: $border-primary;
   border-radius: $radius;
   box-shadow: $shadow-lg;
-  border: 1px solid var(--color-primary);
-  background-color: var(--color-primary);
-  font-weight: 500;
+  font-size: $font-size-md;
+  @include row($spacing-lg);
   text-transform: uppercase;
-  font-size: 14px;
-  @include row($gap);
-  width: 600px;
+  font-weight: $font-weight-bold;
+  background-color: var(--color-primary);
+
 
   &-content {
-    @include row($gap, flex-start);
     flex-grow: 1;
     min-width: 0;
+    @include col($spacing-lg);
     justify-content: space-between;
+    
+    @include media(425px) {
+      @include row($spacing-lg, flex-start);
+    }
   }
 
   &-info-header {
-    @include row($gap, flex-start);
-    min-width: 0;
     flex: 1 0 0;
+    min-width: 0;
+    @include row($spacing-lg, flex-start);
   }
 
   &-info-data {
-    @include row($gap, flex-start);
-    flex: 0 0 auto;
     width: auto;
+    flex: 0 0 auto;
+    @include row($spacing-lg, flex-start);
   }
 
   
   &-label {
-    font-size: 10px;
-    font-weight: 400;
+    text-align: left;
+    font-size: $font-size-sm;
+    font-weight: $font-weight-regular;
     color: var(--color-text-secondary);
   }
   
   &-header {
-    @include col(2px);
     min-width: 0;
+    @include col($spacing-xs);
 
     &-img {
       @include round(50px);
@@ -49,18 +56,18 @@
 
 
     &-title {
-      font-size: 15px;
-      font-weight: 700;
       @include truncate();
+      font-size: $font-size-md;
+      font-weight: $font-weight-bolder;
     }
   }
 
   &-data {
-    @include col(2px);
+    @include col($spacing-xs);
 
     &-icon {
-      @include row(2px);
-      font-size: 10px;
+      @include row($spacing-xs);
+      font-size: $font-size-sm;
 
       &.up {
         color: var(--color-success-primary);
@@ -79,14 +86,14 @@
     @include row();
     @include round(32px);
     cursor: pointer;
-    font-size: 18px;
     justify-content: center;
+    font-size: $font-size-lg;
     color: var(--color-secondary);
     background-color: var(--color-tertiary);
 
     &.active {
       & > .fa-star {
-        font-weight: 600;
+        font-weight: $font-weight-bolder;
       }
     }
   }
