--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -7,16 +7,29 @@ $font-family:
   Roboto,
   Helvetica,
   Arial;
-$font-size: 12px;
+$font-size-base: 12px;
+$font-size-lg: 18px;
+$font-size-md: 14px;
+$font-size-sm: 10px;
+$font-weight-regular: 400;
+$font-weight-bold: 500;
+$font-weight-bolder: 700;
+
 
 // Spacing
-$gap: 16px;
-$padding: 12px;
+$spacing-xs: 2px;
+$spacing-sm: 8px;
+$spacing-md: 12px;
+$spacing-lg: 16px;
+$spacing-xl: 18px;
+$spacing-xxl: 28px;
 
 
 // Borders
 $radius: 12px;
 $radius-pill: 28px;
+$border-primary: 1px solid var(--color-primary);
+$border-secondary: 1px solid var(--color-secondary);
 
 // Shadows
 $shadow-md: 0px 0px 4px 2px rgba(0, 0, 0, 0.1);
